# ref-schema

./: .gitignore  Makefile  README.md  bacnet.ttl  compile.py  ifc.ttl  pyproject.toml  timeseries.ttl  tsdb.ttl
.github/workflows/: builds.yml
examples/: ex1.ttl  influx.ttl
model/: all.ttl  autodesk_build.ttl  bacnet.ttl  core.ttl  csv.ttl  database.ttl  file.ttl  http.ttl  ifc.ttl  influxdb.ttl  metasys.ttl  modbus.ttl  mqtt.ttl  postgres.ttl  ranking.ttl  tsdb.ttl  volttron.ttl
tests/: conftest.py  test_examples.py
tools/: compile.py
