[tool.poetry]
name = "ref-schema"
version = "0.1.0"
description = "An RDF schema for capturing references to other protocols and systems"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^6.1"
pyshacl = "^0.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ontoenv = "^0.2"
pyLODE = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
