[tool.poetry]
name = "ref-schema"
version = "0.1.0"
description = "An RDF schema for capturing references to other protocols and systems"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
readme = "README.md"
packages = [{include = "ref_schema"}]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.3.2"
pyshacl = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ontoenv = "^0.3.6"
pylode = "^3.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
